--- a/self-mastree.html
+++ b/self-mastree.html
@@ -17,5 +17,12 @@
 </template>
 
 <template name="node">
-  <h2>{{title}}</h2>
+  <h4>{{title}}</h4>
+  <ul>
+  {{#each kids}}
+    <li>
+      {{> node}}
+    </li>
+  {{/each}}
+  </ul>
 </template>
