Remove a lot of cruft.

--- a/self-mastree.html
+++ b/self-mastree.html
@@ -3,10 +3,10 @@
 </head>
 
 <body>
-  {{> hello}}
+  {{> root}}
 </body>
 
-<template name="hello">
+<template name="root">
   {{#with root}}
     {{> node}}
   {{/with}}
