Styling changes, use Volkorn.

--- a/self-mastree.html
+++ b/self-mastree.html
@@ -1,5 +1,6 @@
 <head>
   <title>self-mastree</title>
+  <link href='http://fonts.googleapis.com/css?family=Vollkorn:400italic,400' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -13,7 +14,7 @@
 </template>
 
 <template name="node">
-  <h4>{{title}} : {{count}} : {{total_count}}</h4>
+  <p>{{title}} : {{total_count}}</p>
   <ul>
   {{#each kids}}
     <li>
